fixing a bug where mobile browser user-agents add a gradient behind buttons

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -398,7 +398,7 @@ header{
 	padding: $small $size;
 	vertical-align: middle;
 	font-weight: bold;
-	background-color: transparent;
+	background: transparent;
 	outline: none;
 	border: none;
 	border-right: 1px solid darken($bg-color, 5%);
